
  ChangeLog for the eggleton-tools repository.  
  Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
    
    69: AstroFloyd, 11/04/2010
     - added plotplt_new.f to create a version of plotplt.f that can read multiple
       files (and will replace plotpltn.f)
    
    68: AstroFloyd, 11/04/2010
     - moved routines to read plt files from functions.f plt_functions.f
    
    67: AstroFloyd, 11/04/2010
     - plotplt.f:
       - remapped variables 82-100 to 116-134
       - moved around variables >200
       - renamed AM H -> J
       - use defvar to determine whether a variable is defined
    
    66: AstroFloyd, 11/04/2010
     - plotplt.f:
       - use proper colours and legenda for multi-variable plots
       - added variable 115: R/Rzams
       - swapped vars 202/203 (now convection and dH/dt plots)
       - set screen dimensions for ThinkPad
    
    64: AstroFloyd, 01/04/2010
     - remove string length from findfile(s)(), quit_program()
     - plotplt: plot x on log scale iso log(x)
         
    62: AstroFloyd, 02/03/2010
     - plotpltn: plot x on log scale iso log(x)
     - read some more environment variables
    
    61: AstroFloyd, 08/02/2010
     - plotplt: fixed bug in and enhanced Kippenhahn diagram
    
    60: AstroFloyd, 02/02/2010
      - plotpltn:
        - moved label definition to subroutine set_plotpltn_labels in functions.f
	- added ascii labels to pgplot labels
	- added var 91: Reimers ratio
	- rename file and plot PS-title to include variable names with set_PGPS_title
    
    56: AstroFloyd, 17/11/2009
      - updated/changed NRF functions to put online
      - added copyright labels
      - made compatible with gfortran-4.4
      - updated Makefiles
    
    54: AstroFloyd, 27/10/2009
      - made routines compatible with gfortran 4.3
      - added plotpltp.f
      - some f77->f90 notation conversion
    
    52: AstroFloyd, 03/07/2009